--- a/SPCK/app/ui/login.ui
+++ b/SPCK/app/ui/login.ui
@@ -109,6 +109,9 @@ QLineEdit {
          <pointsize>20</pointsize>
         </font>
        </property>
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
       </widget>
      </item>
      <item>
